# DMIA_Base_2021_Spring

./: .python-version  pyproject.toml
hw01/: KNN.ipynb  NaiveBayes.ipynb
