[tool.poetry]
name = "dmia_base_2021_spring"
version = "0.1.0"
description = ""
authors = ["Lisstrange <nik.lis@bk.ru>"]

[tool.poetry.dependencies]
python = "3.9"
jupyter = "^1.0.0"
notebook = "^6.4.4"
numpy = "^1.21.2"
sklearn = "^0.0"
scipy = "^1.7.1"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
scikit-learn = "^1.0"
xgboost = "^1.4.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
